@startuml
scale 2160*1139
set namespaceSeparator .


class module {
    + {static} pyatlasobscura.models.destination.Region[] destinations()
}

class pyatlasobscura.Client {
    + __init__(pandas_mode: bool = True)
    + query(path, args : dict = {}) : bs4.BeautifulSoup
    + regions() : pyatlasobscura.models.destination.Region[]
    + find_country(country_name: str) : pyatlasobscura.models.destination.Region
}

abstract class pyatlasobscura.models.Model {
    + __init__(client : pyatlasobscura.Client)
    + load()
}



class pyatlasobscura.models.destinations.Location {
    + name : str
    + coordinates : int[]
    + country : str
    + region : str
}

class pyatlasobscura.models.destinations.Region {
    + name : str
    + countries : .Country[]
}

class pyatlasobscura.models.destinations.Country {
    + name : str
    + region : str
    + places() : .Place[]
}

class pyatlasobscura.models.destinations.Place {
    + title : str
    + description : str
    + datePublished : str
    + dateModified : str
    + categories : .Category[]
    + location: .Location
    + nearby_places: .Location[]
}

class pyatlasobscura.models.destinations.query.Category {
    + name : str
    + places : .Place[]
}

module *-- pyatlasobscura.Client

pyatlasobscura.models.Model <|-- pyatlasobscura.models.destinations.Region
pyatlasobscura.models.Model <|-- pyatlasobscura.models.destinations.Country
pyatlasobscura.models.Model <|-- pyatlasobscura.models.destinations.Place
pyatlasobscura.models.Model <|-- pyatlasobscura.models.destinations.Location
pyatlasobscura.models.Model <|-- pyatlasobscura.models.destinations.query.Category

pyatlasobscura.models.destinations.Region *- pyatlasobscura.models.destinations.Country
pyatlasobscura.models.destinations.Country *- pyatlasobscura.models.destinations.Place
pyatlasobscura.models.destinations.Place *- pyatlasobscura.models.destinations.Location
pyatlasobscura.models.destinations.Place *-- pyatlasobscura.models.destinations.Category
pyatlasobscura.models.destinations.Category *-- pyatlasobscura.models.destinations.Place

pyatlasobscura.Client *--- pyatlasobscura.models.destinations.Region

@enduml
